--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
     <meta charset="utf-8">
-    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Bio</title>
+    <link rel="stylesheet" href="styles.css">
+
   </head>
+
   <body>
 
+    <header>
+			<h1>Welcome to my Bios!</h1>
+		</header>
+
+		<section>
+			<h1>Welcome to my page!</h1>
+		</section>
+
+		<footer>
+			<h4>Martin Wu 5/2/2020 &copy; </h4>
+		</footer>
+
   </body>
+
 </html>
