--- a/index.html
+++ b/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+<html lang="en">
 
-    <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Bio</title>
-    <link rel="stylesheet" href="styles.css">
+	<head>
+	<!--
+	 Name: Martin Wu
+	 Assignment: Online Profile
+	 filename: index.html
+	 -->
+		<title>Home</title>
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Great+Vibes&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+		<link href="styles.css" rel="stylesheet">
 
-  </head>
+	</head>
 
-  <body>
+	<body>
 
-    <header>
-			<h1>Welcome to my Bios!</h1>
+		<header>
+			<h1>Martin Wu</h1>
 		</header>
 
-		<section>
-			<h1>Welcome to my page!</h1>
+<!-- Section id -->
+		<section id="Intro">
+			<img src="Selfie.png" alt="Selfie">
+			<h2>Welcome to my Professioal Bio's page!</h2>
+			<h1>About me</h1>
+			<p>My name is Martin, I am currently studying at OTC to get my degrees. I like learning about creating as well as making websites and I would like to make website for your business! </p>
+			<p>Here are some Product example that display what I've learn and done in the past regarding making websites</p>
 		</section>
 
+<!-- Flex Box -->
+		<div class="Products">
+			<div class="box-1">
+				<h2>Example 1</h2>
+				<h3><a href="Products\Floats\index.html">Floats</a></h3>
+				<p>Here I learned how to float things, meaning that it'll allow right or left side of the container content(text) to wrap around it</p>
+			</div>
+			<div class="box-2">
+				<h2>Example 2</h2>
+				<h3><a href="Products\LiveWebsite\index.html">Live Website</a></h3>
+				<p>Here I learned how to make a Live Website for a lawnmowing business that doesnt actually exist!</p>
+			</div>
+			<div class="box-3">
+				<h2>Example 3</h2>
+				<h3><a href="Products\myhobbies\index.html">More about me and my hobbies</a></h3>
+				<p>Here is the first website i made, which is about me and my hobbies!</p>
+			</div>
+			</div>
+
+
 		<footer>
-			<h4>Martin Wu 5/2/2020 &copy; </h4>
+			<h4>Please Contact Me! Email Me @:<a href="Martinwu1314@gmail.com"> Martinwu1314@gmail.com</a> Or Call Me @:<a href="tel:314-793-6618">314-793-6618</a> If You're Interested In Having Me Create Your Website!&copy;</h4>
 		</footer>
 
-  </body>
+	</body>
 
 </html>
